# turtile

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.c  meson.build
.github/workflows/: main.yml
src/: commands.c  commands.h  config.c  config.h  cursor.c  cursor.h  keyboard.c  keyboard.h  main.c  output.c  output.h  popup.c  popup.h  server.c  server.h  socket_server.c  socket_server.h  toplevel.c  toplevel.h  ttcli.c  workspace.c  workspace.h
tests/: test.cfg  test.py
